# bldc-speed-controller

./: CMakeLists.txt  main.c
